[ADDED] 从配置文件初始化setting

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1549,6 +1549,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\common\SettingData.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\common\SettingData.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\common\Settings.cpp"
 					>
 				</File>
