--- a/easycomplex/platform/msvc2008/projects/config.json
+++ b/easycomplex/platform/msvc2008/projects/config.json
@@ -1,6 +1,6 @@
 {
 	// settings
-	"font_filepath" : "FZCY_GBK.ttf",
+	"font_filepath" : "D:\\projects\\ejoy\\coco-tools\\editor_bin\\korean.ttf",
 	"sprite_capture" : false,			// 编辑对象捕捉
 	"image_edge_clip" : true,			// 图片边缘裁剪
 	"visible_image_edge" : false,		// 显示图片原始边框
