[CHANGED] 尝试修复shape渲染

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1066,14 +1066,6 @@
 			Name="render"
 			>
 			<File
-				RelativePath="..\..\..\src\drag2d\render\b2Render.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\drag2d\render\b2Render.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\src\drag2d\render\GL10.cpp"
 				>
 			</File>
@@ -1091,42 +1083,6 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\common\opengl\platform.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\drag2d\render\PrimitiveDraw.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\drag2d\render\PrimitiveDraw.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\drag2d\render\RenderList.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\drag2d\render\RenderList.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\drag2d\render\Shader.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\drag2d\render\Shader.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\drag2d\render\ShaderNew.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\drag2d\render\ShaderNew.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\drag2d\render\ShapeStyle.h"
 				>
 			</File>
 			<File
@@ -1173,6 +1129,14 @@
 				Name="shape"
 				>
 				<File
+					RelativePath="..\..\..\src\drag2d\render\b2Render.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\b2Render.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\render\DrawSelectedShapeVisitor.h"
 					>
 				</File>
@@ -1182,6 +1146,26 @@
 				</File>
 				<File
 					RelativePath="..\..\..\src\drag2d\render\DrawShapesVisitor.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\PrimitiveDraw.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\PrimitiveDraw.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\PrimitiveDrawNew.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\PrimitiveDrawNew.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\ShapeStyle.h"
 					>
 				</File>
 			</Filter>
@@ -1274,6 +1258,34 @@
 				</File>
 				<File
 					RelativePath="..\..\..\src\drag2d\render\LabelNew.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="shader"
+				>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\RenderList.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\RenderList.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\Shader.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\Shader.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\ShaderNew.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\ShaderNew.h"
 					>
 				</File>
 			</Filter>
