--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1281,6 +1281,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\render\ShaderImpl.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\ShaderImpl.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\render\ShaderNew.cpp"
 					>
 				</File>
