[FIXED] 打包用的NOT_LOAD_IMAGE换位置

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1577,6 +1577,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\common\TodoConfig.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\common\types.h"
 					>
 				</File>
