--- a/easymesh/platform/msvc2008/projects/libmesh.vcproj
+++ b/easymesh/platform/msvc2008/projects/libmesh.vcproj
@@ -307,6 +307,14 @@
 					RelativePath="..\..\..\src\libmesh\CreateMeshOP.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\libmesh\CreateStripOP.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libmesh\CreateStripOP.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="edit"
