[FIXED] 帧率字体显示，把camera放到screen中

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1650,6 +1650,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\drag2d\view\Screen.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\drag2d\view\Screen.h"
 				>
 			</File>
