--- a/easysketch/platform/msvc2008/projects/libsketch.vcproj
+++ b/easysketch/platform/msvc2008/projects/libsketch.vcproj
@@ -145,6 +145,122 @@
 	<References>
 	</References>
 	<Files>
+		<Filter
+			Name="dataset"
+			>
+			<File
+				RelativePath="..\..\..\src\libsketch\config.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libsketch\Sprite.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libsketch\Sprite.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libsketch\Symbol.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libsketch\Symbol.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="data"
+			>
+			<Filter
+				Name="model"
+				>
+				<File
+					RelativePath="..\..\..\src\libsketch\ObjSurface.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsketch\ObjSurface.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsketch\ParametricEquations.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsketch\ParametricSurface.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsketch\ParametricSurface.h"
+					>
+				</File>
+			</Filter>
+		</Filter>
+		<Filter
+			Name="model"
+			>
+			<File
+				RelativePath="..\..\..\src\libsketch\Model.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libsketch\ModelObj.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libsketch\ModelObj.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="view"
+			>
+			<Filter
+				Name="library"
+				>
+				<File
+					RelativePath="..\..\..\src\libsketch\LibraryPage.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsketch\LibraryPage.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="stage"
+				>
+				<File
+					RelativePath="..\..\..\src\libsketch\StageCanvas.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsketch\StageCanvas.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsketch\StagePanel.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsketch\StagePanel.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="toolbar"
+				>
+				<File
+					RelativePath="..\..\..\src\libsketch\ToolbarPanel.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsketch\ToolBarPanel.h"
+					>
+				</File>
+			</Filter>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
