--- a/.gitignore
+++ b/.gitignore
@@ -125,6 +125,7 @@ easyimage/platform/msvc2008/easyimage
 easyimage/platform/msvc2008/libimage
 easysketch/platform/msvc2008/easysketch
 easysketch/platform/msvc2008/libsketch
+easysketch/platform/msvc2008/easy3d
 formation/platform/msvc2008/formation
 raiden/platform/msvc2008/raiden
 shootbubble/platform/msvc2008/shootbubble
