--- a/easysketch/platform/msvc2008/projects/easy3d.vcproj
+++ b/easysketch/platform/msvc2008/projects/easy3d.vcproj
@@ -145,24 +145,120 @@
 	<References>
 	</References>
 	<Files>
+		<Filter
+			Name="math"
+			>
+			<File
+				RelativePath="..\..\..\src\easy3d\Matrix.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easy3d\Quaternion.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easy3d\Vector.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="render"
+			>
+			<File
+				RelativePath="..\..\..\src\easy3d\LightingShader.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easy3d\LightingShader.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easy3d\ShaderMgr.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easy3d\ShaderMgr.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="view"
+			>
+			<File
+				RelativePath="..\..\..\src\easy3d\StageCanvas.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easy3d\StageCanvas.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="dateset"
+			>
+			<File
+				RelativePath="..\..\..\src\easy3d\Cube.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easy3d\Cube.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easy3d\IModel.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easy3d\ViewFrustum.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easy3d\ViewFrustum.h"
+				>
+			</File>
+			<Filter
+				Name="model"
+				>
+				<File
+					RelativePath="..\..\..\src\easy3d\ISurface.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easy3d\ModelObj.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easy3d\ModelObj.h"
+					>
+				</File>
+				<Filter
+					Name="parametric"
+					>
+					<File
+						RelativePath="..\..\..\src\easy3d\ModelParametric.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easy3d\ModelParametric.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easy3d\ParametricEquations.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easy3d\ParametricSurface.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easy3d\ParametricSurface.h"
+						>
+					</File>
+				</Filter>
+			</Filter>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\easy3d\easy3d.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\easy3d\ShaderMgr.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\easy3d\ShaderMgr.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\easy3d\StageCanvas.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\easy3d\StageCanvas.h"
 			>
 		</File>
 	</Files>
