[ADDED] zoom for camera

--- a/easysketch/platform/msvc2008/projects/libsketch.vcproj
+++ b/easysketch/platform/msvc2008/projects/libsketch.vcproj
@@ -237,11 +237,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\libsketch\SelectOP.cpp"
+				RelativePath="..\..\..\src\libsketch\SelectSpriteOP.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\libsketch\SelectOP.h"
+				RelativePath="..\..\..\src\libsketch\SelectSpriteOP.h"
 				>
 			</File>
 			<Filter
