--- a/.gitignore
+++ b/.gitignore
@@ -111,6 +111,8 @@ easyparticle/.svn
 easyparticle2d/platform/msvc2008/easyparticle2d
 easyparticle3d/platform/msvc2008/easyparticle3d
 easyparticle3d/platform/msvc2008/libparticle3d
+easyparticle2dnew/platform/msvc2008/easyparticle2d
+easyparticle2dnew/platform/msvc2008/libparticle2d
 easyshape/.git
 easyshape/platform/msvc2008/easyshape
 easyshape/platform/msvc2008/easyshape_new
