--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -303,6 +303,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\easydb\PackParticle2D.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easydb\PackParticle2D.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\easydb\PackParticle3D.cpp"
 				>
 			</File>
