--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -161,6 +161,10 @@
 				Name="arrange"
 				>
 				<File
+					RelativePath="..\..\..\src\drag2d\operator\ArrangeSpriteConfig.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\operator\ArrangeSpriteFixOP.cpp"
 					>
 				</File>
@@ -211,14 +215,6 @@
 				<Filter
 					Name="sprite"
 					>
-					<File
-						RelativePath="..\..\..\src\drag2d\operator\ArrangeSpriteImpl.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\src\drag2d\operator\ArrangeSpriteImpl.h"
-						>
-					</File>
 					<File
 						RelativePath="..\..\..\src\drag2d\operator\IArrangeSpriteState.h"
 						>
